# aviutl_textassist

./: .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  build.bash
.github/workflows/: build.yml  main.yml  releaser.yml
src/: CMakeLists.txt  acutest.h  aviutl.h  fontlist.c  fontlist.h  main.c  ods.c  ods.h  test.c  textassist.c  textassist.h
src/3rd/aviutl_sdk/: filter.h
src/cmake/: llvm-mingw.cmake  version.cmake
